# onne_keyboard

./: .gitignore  LICENSE  Readme.md
.github/workflows/: build.yml  clippy_check.yml  rust_fmt.yml
firmware/: Cargo.toml  memory.x
firmware/src/: main.rs
