[package]
name = "onne_keyboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# keyberon = {git = "https://github.com/TeXitoi/keyberon"}
keyberon = "0.1.1"
panic-halt = "0.2.0"
nb = "1.0.0"
embedded-hal = "0.2.6"
qt_py_m0 = { git = "https://github.com/atsamd-rs/atsamd", features=["usb", "unproven"] }
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "0.5"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
generic-array = "0.14.4"


