[package]
name = "onne_keyboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = "0.1.1"
panic-halt = "0.2"
embedded-hal = "0.2.6"
qt_py_m0 = { git = "https://github.com/atsamd-rs/atsamd", features=["usb", "unproven"] }
# cortex-m = "0.7.3"
cortex-m = "0.6"
# cortex-m-rt = { version = "0.7.0", features = ["device"] }
cortex-m-rt = { version = "0.6.8", features = ["device"] }
# cortex-m-rtic = "0.5.8"
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic", version = "0.6.0-alpha.5"}
usb-device = "0.2.8"
generic-array = "0.14.4"
atsamd-hal = {version="0.12", features=["samd21e"]}
usbd-serial = "0.1"


