[package]
name = "onne_keyboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyberon = { git = "https://github.com/onnenon/keyberon"}
panic-halt = "0.2"
embedded-hal = {version="0.2.7", features=["unproven"]}
qt_py_m0 = { git = "https://github.com/atsamd-rs/atsamd", features=["usb", "unproven"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.6.8", features = ["device"] }
usb-device = "0.2.8"
atsamd-hal = {version="0.15", features=["samd21e"]}


